[project]
name = "budget-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.3.2",
    "fpdf2>=2.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "streamlit>=1.55.0",
]
